# Classviptransferspy

./: .gitignore  BITACORA.md  DEPLOY.md  DIAGNOSTICO.md  Makefile  PLAN_PRODUCCION.md  README.md  WORKPLAN.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 1dcb7aeb1199_schema_inicial.py  38eca4d0c9e6_rls_deny_policies_public_tables.py  53814fa057f0_enable_rls_all_public_tables.py  55e1faff1097_admin_tasks.py  b7c4d9e1a2f3_fix_sprinter_prices_6_11_pax.py  c9f1a2b3d4e5_drop_pricing_rules_table.py  d1e2f3a4b5c6_drop_redundant_confirmation_code_index.py
backend/app/: __init__.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  admin.py  ai.py  auth.py  bookings.py  customers.py  pricing.py  stripe.py
backend/app/core/: config.py  exceptions.py  rate_limit.py  security.py
backend/app/lib/: ai_knowledge.py
backend/app/middleware/: __init__.py  auth.py  dependencies.py  security_headers.py
backend/app/models/: __init__.py  admin.py  admin_task.py  ai_conversation.py  audit.py  booking.py  booking_assignment.py  booking_item.py  client_account.py  customer.py  driver.py  email_log.py  enums.py  payment.py  pricing.py  pricing_override.py  vehicle.py
backend/app/schemas/: __init__.py  account.py  admin.py  admin_task.py  ai.py  audit.py  auth.py  booking.py  customer.py  fleet.py  payment.py  pricing.py
backend/app/services/: __init__.py  account.py  admin.py  admin_task.py  ai.py  audit.py  booking.py  booking_operations.py  customer.py  email.py  fleet.py  payment.py  pdf.py  stripe.py
backend/app/templates/emails/: company_notification.html  customer_cancelled.html  customer_confirmed.html  customer_pending.html  leg_block.html
backend/app/templates/pdfs/: booking_confirmation.html
backend/app/tests/: __init__.py  conftest.py  test_admin_accounts.py  test_admin_booking_actions.py  test_admin_bookings.py  test_admin_dashboard.py  test_admin_fleet.py  test_admin_tasks.py  test_ai.py  test_audit.py  test_auth.py  test_booking_pricing.py  test_booking_service.py  test_bookings.py  test_customers.py  test_email.py  test_pdf.py  test_pricing.py  test_stripe.py
backend/scripts/: ensure_admin.py  seed.py  setup_db.py  test_db.py  test_db_concurrency.py
backend/scripts/data/: areas.json  extras.json  hotels.json  rules.json
docker/: Dockerfile.backend  docker-compose.yml  entrypoint.sh
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/public/: manifest.webmanifest  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: button.tsx  tabs.tsx
frontend/src/features/admin/components/: AccountsTab.tsx  AdminBookings.tsx  AdminRoute.tsx  DashboardOverviewTab.tsx  FinanzasTab.tsx  MarketingTab.tsx  PricingManager.tsx  RRHHTab.tsx  TareasTab.tsx
frontend/src/features/admin/hooks/: useAdminAuth.ts
frontend/src/features/admin/lib/: admin-date.ts  adminSession.ts  booking-operations.ts  social-reputation.ts
frontend/src/features/admin/pages/: Admin.tsx  AdminLogin.tsx
frontend/src/features/booking/components/: BookingLegs.tsx
frontend/src/features/booking/hooks/: useBookingCatalog.ts  useBookingForm.ts
frontend/src/features/booking/lib/: booking-api.ts  booking-legs.ts
frontend/src/features/booking/pages/: Book.tsx  Checkout.tsx  CheckoutSuccess.tsx  Confirmation.tsx
frontend/src/features/marketing/components/: ChatWidget.tsx  Footer.tsx  SEO.tsx  (+1 more)
frontend/src/i18n/: translations.ts
frontend/src/shared/components/: ErrorBoundary.tsx  Layout.tsx  Placeholder.tsx
frontend/src/shared/hooks/: use-toast.ts
frontend/src/shared/lib/: api.ts  assets.ts  cloudinary-assets.ts  errors.ts  text.ts
frontend/src/shared/pages/: NotFound.tsx
frontend/src/shared/providers/: LanguageContext.tsx
frontend/src/shared/ui/: accordion.tsx  button.tsx  calendar.tsx  form.tsx  label.tsx  luxury-spinner.tsx  popover.tsx  select.tsx  skeleton.tsx  sonner.tsx  table.tsx  toast.tsx  toaster.tsx  tooltip.tsx
(+10 files in other folders)
