# El deploy (Docker) NO instala este paquete: copia el código y resuelve solo la
# lista [project.dependencies] con `uv pip compile`. Pero declarar el build-system
# y el paquete (`app`) hace que `pip install .`/`-e .` funcione para CI/tooling —
# sin esto, setuptools encuentra dos paquetes top-level (`app` y `alembic`) y falla.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "classvip-transfers"
version = "0.1.0"
description = "ClassVIP Transfers — Luxury Transportation Booking System"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "ClassVIP Transfers", email = "admin@classviptransfers.com" }
]

# Dependencias de PRODUCCIÓN.
# Regla: aquí solo va lo que necesita el servidor para correr.
dependencies = [
    # Web framework y servidor ASGI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32,<0.33",
    "orjson>=3.10,<4.0",

    # Configuración y validación
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "email-validator>=2.2,<3.0",

    # Base de datos y migraciones
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",

    # Seguridad: JWT, password hashing y rate limiting
    "pyjwt[crypto]>=2.10,<3.0",
    "pwdlib[argon2]>=0.2,<0.3",
    "itsdangerous>=2.2,<3.0",
    "slowapi>=0.1,<0.2",

    # Integraciones externas
    "stripe>=11.0,<12.0",
    "resend>=2.6,<3.0",
    "httpx>=0.27,<0.28",
    "openai>=1.50,<2.0",
    "python-multipart>=0.0.12,<0.1",

    # Templates, PDF y archivos
    "jinja2>=3.1,<4.0",
    "weasyprint>=62",
    "aiofiles>=24.1,<25.0",

    # Tareas en background
    "celery>=5.4,<6.0",
    "redis>=5.2,<6.0",

    # Observabilidad
    "structlog>=24.4,<25.0",
    "sentry-sdk[fastapi]>=2.18,<3.0",
]

[project.optional-dependencies]
# Dependencias de DESARROLLO.
# Regla: aquí va lo que ayuda a programar, probar y auditar, pero no es necesario en producción.
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.14,<4.0",
    "factory-boy>=3.3,<4.0",
    "faker>=30.0,<31.0",
    "freezegun>=1.5,<2.0",
    "respx>=0.21,<0.22",
    "ruff>=0.7,<0.8",
    "mypy>=1.13,<2.0",
    "pre-commit>=4.0,<5.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear: bugs comunes
    "UP",   # pyupgrade
    "ASYNC",# errores async
    "S",    # seguridad básica
]
ignore = [
    "S101", # permitir assert en tests
]

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = [
    "F821",  # Forward references de SQLAlchemy relationship() — se resuelven en runtime
]
"app/models/__init__.py" = [
    "F401",  # Re-export de modelos y enums para registro con Base.metadata
]
"app/api/v1/*.py" = [
    "B008",  # Depends() en defaults es el patrón estándar de FastAPI
    "B904",  # raise dentro de except es intencional — convertimos ClassVIPError a HTTPException
]
"app/tests/*.py" = [
    "S105",  # Strings en asserts de tests no son hardcoded passwords reales
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["stripe.*", "resend.*", "weasyprint.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=50"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["app/tests"]
